syntax = "proto3";

package logspb;

option go_package="/logspb";

message Log {
    string service_name =1;
    string error_message =2;
    string stack_trace =3;
}

message LogRequest{
    Log log =1;
}
message LogResponse{
    string message=1;
}
service LogService {
    rpc InsertLog(LogRequest) returns (LogResponse);
}
